--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiohttp==3.8.1
 aiosignal==1.2.0
+APScheduler==3.9.1
 async-timeout==4.0.2
+asyncio==3.4.3
 attrs==22.1.0
 certifi==2022.6.15
 charset-normalizer==2.1.1
@@ -10,8 +12,14 @@ idna==3.3
 multidict==6.0.2
 oauthlib==3.2.0
 python-dotenv==0.20.0
+pytz==2022.2.1
+pytz-deprecation-shim==0.1.0.post0
 requests==2.28.1
 requests-oauthlib==1.3.1
+schedule==1.1.0
+six==1.16.0
 tweepy==4.10.1
+tzdata==2022.2
+tzlocal==4.2
 urllib3==1.26.12
 yarl==1.8.1
